--- a/angular.json
+++ b/angular.json
@@ -22,9 +22,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/sass/paper-kit.scss",
-              "src/assets/css/demo.css",
-              "src/assets/css/nucleo-icons.css"
+              "src/assets/sass/paper-kit.scss"
             ],
             "scripts": []
           },
@@ -75,9 +73,7 @@
             "scripts": [],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/sass/paper-kit.scss",
-              "src/assets/css/demo.css",
-              "src/assets/css/nucleo-icons.css"
+              "src/assets/sass/paper-kit.scss"
             ],
             "assets": [
               "src/assets",
