--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "paper-kit-2-angular",
-  "version": "1.5.0",
+  "name": "orkin-brown-associates-angular",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/creativetimofficial/pk2-angular.git"
+    "url": "https://github.com/Quiza12/OrkinBrown"
   },
   "scripts": {
     "ng": "ng",
