--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/sass/paper-kit.scss"
+              "src/assets/sass/paper-kit.scss",
+              "src/assets/css/nucleo-icons.css"
             ],
             "scripts": []
           },
@@ -73,7 +74,8 @@
             "scripts": [],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/sass/paper-kit.scss"
+              "src/assets/sass/paper-kit.scss",
+              "src/assets/css/nucleo-icons.css"
             ],
             "assets": [
               "src/assets",
