--- a/package.json
+++ b/package.json
@@ -13,20 +13,19 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "postinstall": "ngcc"
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
   "dependencies": {
-    "@angular/animations": "^15.2.10",
-    "@angular/common": "^15.2.10",
-    "@angular/compiler": "^15.2.10",
-    "@angular/core": "^15.2.10",
-    "@angular/forms": "^15.2.10",
-    "@angular/localize": "^15.2.10",
-    "@angular/platform-browser": "^15.2.10",
-    "@angular/platform-browser-dynamic": "^15.2.10",
-    "@angular/router": "^15.2.10",
-    "@ng-bootstrap/ng-bootstrap": "14.0.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/localize": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@ng-bootstrap/ng-bootstrap": "15.0.0",
     "bootstrap": "4.5.3",
     "core-js": "3.8.1",
     "jquery": "3.5.1",
@@ -36,13 +35,13 @@
     "popper.js": "1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.10",
-    "@angular/cli": "~15.2.10",
-    "@angular/compiler-cli": "^15.2.10",
-    "@angular/language-service": "15.2.10",
+    "@angular-devkit/build-angular": "^16.2.12",
+    "@angular/cli": "~16.2.12",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "16.2.12",
     "@types/bootstrap": "5.0.1",
     "@types/chartist": "0.11.0",
     "@types/jasmine": "~4.0.0",
@@ -59,6 +58,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "protractor": "7.0.0",
     "ts-node": "~10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "5.4.3"
   }
 }
