--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,7 @@
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
+            
             "assets": [
               "src/assets",
               "src/favicon.ico"
@@ -50,18 +51,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "pk2-angular:build"
+            "buildTarget": "pk2-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "pk2-angular:build:production"
+              "buildTarget": "pk2-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pk2-angular:build"
+            "buildTarget": "pk2-angular:build"
           }
         },
         "test": {
@@ -70,6 +71,7 @@
             "main": "src/test.ts",
             "karmaConfig": "./karma.conf.js",
             "polyfills": "src/polyfills.ts",
+            
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
